--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LogIn</title>
   <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="index.css">
 </head>
 
@@ -16,6 +15,7 @@
     </picture>
 
     <h1>Code Quest</h1>
+    <p>Ditt äventyr in i tech-världen nörjar här!</p>
 
     <section class="login-section">
       <h2>Logga in</h2>
@@ -28,6 +28,9 @@
 
         <button type="submit">Log in</button>
       </form>
+      <a href ="singUp.html" class="signup">Skapa ett konto</a>
+      <br>
+      <a href="#">Glömt lösenordet?</a>
     </section>
   </main>
 </body>
