--- a/karta.html
+++ b/karta.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="#karta.html">Världskarta</a></li>
-            <li><a href="#profil.html">Profil</a></li>
-            <li><a href="#inställning.html">Tjänster</a></li>
+            <li><a href="#karta.html"><img src="varldskarta.png" alt="Världskarta"><span class="nav-text">Karta</span></a></li>
+            <li><a href="#profil.html"><img src="profil.png" alt="Profil"><span class="nav-text">Profil</span></a></li>
+            <li><a href="#inställning.html"><img src="settings.png" alt="Tjänster"><span class="nav-text">Inställningar</span></a></li>
         </ul>
     </nav>
 
