--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <main>
     <picture>
-      <source media="(max-width: 600px)" srcset="https://www.figma.com/design/YzXOfh2wEraa3ysT2KuO4y/CodeQuests?node-id=54-87&m=dev">
-      <img src="https://www.figma.com/design/YzXOfh2wEraa3ysT2KuO4y/CodeQuests?node-id=54-87&m=dev" alt="Code Quest Logo">
+      <source media="(max-width: 600px)" srcset="logo.png">
+      <img src="logo.png" alt="Code Quest Logo">
     </picture>
 
     <h1>Code Quest</h1>
