--- a/karta.html
+++ b/karta.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="karka.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
     <nav class="navbar">
