--- a/karta.html
+++ b/karta.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="#karta.html"><img src="varldskarta.png" alt="Världskarta"><span class="nav-text">Karta</span></a></li>
+            <li><a href="#karta.html"><img src="varldskarta.png" alt="Världskarta"><span class="nav-text">Världskarta</span></a></li>
             <li><a href="#profil.html"><img src="profil.png" alt="Profil"><span class="nav-text">Profil</span></a></li>
             <li><a href="#inställning.html"><img src="settings.png" alt="Tjänster"><span class="nav-text">Inställningar</span></a></li>
         </ul>
