--- a/karta.html
+++ b/karta.html
@@ -17,5 +17,10 @@
         </ul>
     </nav>
 
+    <main>
+        <h1>Världskarta</h1>
+        <p>Här kan du utforska världen!</p>
+    </main>
+
 </body>
 </html>
