--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 
 <body>
   <main>
-    <picture>
-      <source media="(max-width: 600px)" srcset="logo.png">
-      <img src="logo.png" alt="Code Quest Logo">
-    </picture>
+    <section class="intro">
+      <picture id="logo">
+        <source media="(max-width: 600px)" srcset="logo.png">
+        <img src="logo.png" alt="Code Quest Logo">
+      </picture>
 
-    <h1>Code Quest</h1>
-    <p>Ditt äventyr in i tech-världen nörjar här!</p>
+      <h1>Code Quest</h1>
+      <p>Ditt äventyr in i tech-världen nörjar här!</p>
+    </section>
 
-    <section class="login-section">
+    <section class="login">
       <h2>Logga in</h2>
       <form class="login-form">
         <label for="username">Användarnamn:</label>
