--- a/inställning.html
+++ b/inställning.html
@@ -4,17 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="karka.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="inställning.css">
 </head>
 <body>
     <nav class="navbar">
-        <ul>
-            <li><a href="#karta.html"><img src="varldskarta.png" alt="Världskarta"><span class="nav-text">Karta</span></a></li>
-            <li><a href="#profil.html"><img src="profil.png" alt="Profil"><span class="nav-text">Profil</span></a></li>
-            <li><a href="#inställning.html"><img src="settings.png" alt="Tjänster"><span class="nav-text">Inställningar</span></a></li>
-        </ul>
+      <ul>
+        <li><a href="karta.html"><img src="varldskarta.png" alt="Världskarta"><span class="nav-text" data-i18n="nav.world">Världskarta</span></a></li>
+        <li><a href="profil.html"><img src="profil.png" alt="Profil"><span class="nav-text" data-i18n="nav.profile">Profil</span></a></li>
+        <li><a href="inställning.html"><img src="settings.png" alt="Tjänster"><span class="nav-text" data-i18n="nav.settings">Inställningar</span></a></li>
+      </ul>
     </nav>
 
+    <header>
+      <h1 data-i18n="settings.title">Inställningar</h1>
+    </header>
+
+    <section class="settings">
+      <form id="themeForm">
+        <label for="theme" data-i18n="settings.selectLabel">Välj tema:</label>
+        <select id="theme" name="theme" data-theme-select>
+          <option value="dark" data-i18n="theme.dark">Mörkt</option>
+          <option value="light" data-i18n="theme.light">Ljust</option>
+        </select>
+        <button type="submit" data-i18n="settings.save">Spara inställningar</button>
+    </form>
+    </section>
+
+    <section class="settings">
+      <form id="languageForm">  
+        <label for="language" data-i18n="settings.langLabel">Välj språk:</label>
+        <select id="language" name="language" data-lang-select>
+          <option value="sv" data-i18n="lang.sv">Svenska</option>
+          <option value="en" data-i18n="lang.en">English</option>
+        </select>
+        <button type="submit" data-i18n="settings.save">Spara inställningar</button>
+      </form>
+    </section>
+
+    <section class="settings">
+      <div class="account-logout">
+        <h3 data-i18n="settings.accountHeading">Konto</h3>
+        <p class="muted" data-i18n="settings.accountNote">Klicka på Logga ut för att återgå till inloggning.</p>
+        <button id="logoutBtn" class="btn logout" type="button" data-i18n="settings.logout">Logga ut</button>
+      </div>
+    </section>
+
+    <!-- include language.js before theme.js -->
+    <script src="language.js"></script>
+    <script src="theme.js"></script>
+    <script src="settings.js"></script>
 </body>
 </html>
